RESOLVED FIXED71959
WebGraphicsLayer behaves wrongly when no contentsScale is set.
https://bugs.webkit.org/show_bug.cgi?id=71959
Summary WebGraphicsLayer behaves wrongly when no contentsScale is set.
Alexis Menard (darktears)
Reported 2011-11-09 14:33:33 PST
WebGraphicsLayer behaves wrongly when no contentsScale is set.
Attachments
Patch (1.43 KB, patch)
2011-11-09 14:35 PST, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2011-11-09 14:35:36 PST
WebKit Review Bot
Comment 2 2011-11-09 15:28:08 PST
Comment on attachment 114369 [details] Patch Clearing flags on attachment: 114369 Committed r99769: <http://trac.webkit.org/changeset/99769>
WebKit Review Bot
Comment 3 2011-11-09 15:28:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.