WebGraphicsLayer behaves wrongly when no contentsScale is set. https://bugs.webkit.org/show_bug.cgi?id=71959

Reviewed by Noam Rosenthal.

The contentsScale needs to get a default value just like
TiledBackingStore in case no value is explicitely set.

It is covered by existing tests.

* WebProcess/WebCoreSupport/WebGraphicsLayer.cpp:
(WebCore::WebGraphicsLayer::WebGraphicsLayer):


Canonical link: https://commits.webkit.org/88334@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99769 268f45cc-cd09-0410-ab3c-d52691b4dbfc